--- a/penguin-fashion/index.html
+++ b/penguin-fashion/index.html
@@ -14,7 +14,17 @@
         <!-- banner -->
         <div>
             <div>
-                <h1>Be the Penguins Of Winter!</h1>
+                <h1 class="text-7xl font-semibold uppercase">
+                    <span class="text-yellow-400">Be the Penguins</span>
+                    <br>
+                    <span class="text-indigo-600">Of Winter!</span>
+                </h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt fugiat rerum eum doloribus impedit sit.</p>
+                <button class="py-4 px-8 uppercase text-white bg-gradient-to-r from-[#465927] to-[#2F4F4F] hover:from-[#145214] hover:to-[#96c74c] rounded-md">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-6 inline">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+                      </svg>                      
+                    Buy Now</button>
             </div>
         </div>
         <div>
