--- a/penguin-fashion/index.html
+++ b/penguin-fashion/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <!-- header -->
-    <header class="container mx-auto">
+    <header class=" bg-emerald-100">
         <!-- nav -->
         <!-- banner -->
-        <div>
-            <div>
+        <div class="container mx-auto py-12 md:flex justify-center items-center mt-12">
+            <div class="space-y-6 px-4">
                 <h1 class="text-7xl font-semibold uppercase">
                     <span class="text-yellow-400">Be the Penguins</span>
                     <br>
@@ -21,20 +21,42 @@
                 </h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt fugiat rerum eum doloribus impedit sit.</p>
                 <button class="py-4 px-8 uppercase text-white bg-gradient-to-r from-[#465927] to-[#2F4F4F] hover:from-[#145214] hover:to-[#96c74c] rounded-md">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-6 inline">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
                       </svg>                      
                     Buy Now</button>
             </div>
-        </div>
-        <div>
             <div>
-                <img src="images/model.png" alt="">
+                <img class="w-3/4 md:w-full" src="images/model.png" alt="">
             </div>
         </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <!-- MAIN -->
+    <main class="container mx-auto">
+        <!-- Woman jacket -->
+        <section class="mt-12">
+            <h2 class="text-5xl font-semibold uppercase">man jacket</h2>
+            <div>
+                <!-- jacket card -->
+                <div>
+                    <img src="images/jacket-1.png" alt="">
+                    <div>
+                        <h2 class="text-2xl">Yellow W-coat</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, incidunt?
+                        </p>
+                        <div>
+                            <h2 class="text-4xl">234/-</h2>
+                            <button class="py-4 px-4 uppercase text-black bg-gradient-to-r from-[#ff5233] to-[#ff7d66] hover:from[#ff5233] hoover:to-[#ff7d66] rounded">Buy</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- FOOTER -->
+    <footer>
+
+    </footer>
 
 </body>
 </html>
