--- a/penguin-fashion/index.html
+++ b/penguin-fashion/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penguin Fashion</title>
      <script src="https://cdn.tailwindcss.com"></script>
+     <!-- created a custom color file -->
+     <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        price: '#FABE4C'
+                    }
+                }
+            }
+        }
+     </script>
 </head>
 <body>
     <!-- header -->
@@ -19,7 +32,7 @@
                     <br>
                     <span class="text-indigo-600">Of Winter!</span>
                 </h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt fugiat rerum eum doloribus impedit sit.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt, Lorem ipsum dolor sit amet consectetur adipisicing elit. At, minus. fugiat rerum eum doloribus impedit sit.</p>
                 <button class="py-4 px-8 uppercase text-white bg-gradient-to-r from-[#465927] to-[#2F4F4F] hover:from-[#145214] hover:to-[#96c74c] rounded-md">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
@@ -35,22 +48,68 @@
     <main class="container mx-auto">
         <!-- Woman jacket -->
         <section class="mt-12">
-            <h2 class="text-5xl font-semibold uppercase">man jacket</h2>
-            <div>
+            <h2 class="text-5xl font-semibold uppercase text-pink-700">woman jacket</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2 my-2 py-2">
                 <!-- jacket card -->
-                <div>
-                    <img src="images/jacket-1.png" alt="">
-                    <div>
-                        <h2 class="text-2xl">Yellow W-coat</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, incidunt?
+                <div class="rounded-2xl p-4 drop-shadow-xl">
+                    <div class="bg-slate-200 p-4 rounded-2xl">
+                        <img src="images/jacket-1.png" alt="">
+                    </div>
+                    <div class="my-2 py-2">
+                        <h3 class="text-2xl text-pink-700">Yellow W-coat</h2>
+                        <p class="text-black">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, incidunt?
                         </p>
-                        <div>
-                            <h2 class="text-4xl">234/-</h2>
-                            <button class="py-4 px-4 uppercase text-black bg-gradient-to-r from-[#ff5233] to-[#ff7d66] hover:from[#ff5233] hoover:to-[#ff7d66] rounded">Buy</button>
+                        <div class="flex justify-between my-2 py-2">
+                            <h2 class="text-4xl font-semibold text-price">$234</h2>
+                            <button class="py-2 px-4 uppercase text-black bg-gradient-to-r from-[#c95d4a] to-[#c73e3e] hover:from[#ff5233] hoover:to-[#ff7d66] rounded">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+                                  </svg>
+                                Buy</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="rounded-2xl p-4 drop-shadow-xl">
+                    <div class="bg-slate-200 p-4 rounded-2xl">
+                        <img src="images/jacket-2.png" alt="">
+                    </div>
+                    <div class="my-2 py-2">
+                        <h3 class="text-2xl text-pink-700">Yellow W-coat</h2>
+                        <p class="text-black">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, incidunt?
+                        </p>
+                        <div class="flex justify-between my-2 py-2">
+                            <h2 class="text-4xl font-semibold text-price">$234</h2>
+                            <button class="py-2 px-4 uppercase text-black bg-gradient-to-r from-[#c95d4a] to-[#c73e3e] hover:from[#ff5233] hoover:to-[#ff7d66] rounded">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+                                  </svg>
+                                Buy</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="rounded-2xl p-4 drop-shadow-xl">
+                    <div class="bg-slate-200 p-4 rounded-2xl">
+                        <img src="images/jacket-3.png" alt="">
+                    </div>
+                    <div class="my-2 py-2">
+                        <h3 class="text-2xl text-pink-700">Yellow W-coat</h2>
+                        <p class="text-black">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, incidunt?
+                        </p>
+                        <div class="flex justify-between my-2 py-2">
+                            <h2 class="text-4xl font-bold text-price">$234</h2>
+                            <button class="py-2 px-4 uppercase text-black bg-gradient-to-r from-[#c95d4a] to-[#c73e3e] hover:from[#ff5233] hoover:to-[#ff7d66] rounded">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+                                  </svg>
+                                Buy</button>
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
+        <!-- Man jacket -->
+        <section>
+            
         </section>
     </main>
     <!-- FOOTER -->
