man jackets added

--- a/penguin-fashion/index.html
+++ b/penguin-fashion/index.html
@@ -109,7 +109,66 @@
         </section>
         <!-- Man jacket -->
         <section>
-            
+            <section class="mt-12">
+                <h2 class="text-5xl font-semibold uppercase text-pink-700">Man jacket</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2 my-2 py-2">
+                    <!-- jacket card -->
+                    <div class="rounded-2xl p-4 drop-shadow-xl">
+                        <div class="bg-slate-200 p-4 rounded-2xl">
+                            <img src="images/jacket-4.png" alt="">
+                        </div>
+                        <div class="my-2 py-2">
+                            <h3 class="text-2xl text-pink-700">Black M-jack</h2>
+                            <p class="text-black">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, incidunt?
+                            </p>
+                            <div class="flex justify-between my-2 py-2">
+                                <h2 class="text-4xl font-semibold text-price">$204</h2>
+                                <button class="py-2 px-4 uppercase text-black bg-gradient-to-r from-[#c95d4a] to-[#c73e3e] hover:from[#ff5233] hoover:to-[#ff7d66] rounded">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 inline">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+                                      </svg>
+                                    Buy</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rounded-2xl p-4 drop-shadow-xl">
+                        <div class="bg-slate-200 p-4 rounded-2xl">
+                            <img src="images/jacket-6.png" alt="">
+                        </div>
+                        <div class="my-2 py-2">
+                            <h3 class="text-2xl text-pink-700">Black M-jack</h2>
+                            <p class="text-black">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, incidunt?
+                            </p>
+                            <div class="flex justify-between my-2 py-2">
+                                <h2 class="text-4xl font-semibold text-price">$134</h2>
+                                <button class="py-2 px-4 uppercase text-black bg-gradient-to-r from-[#c95d4a] to-[#c73e3e] hover:from[#ff5233] hoover:to-[#ff7d66] rounded">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 inline">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+                                      </svg>
+                                    Buy</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rounded-2xl p-4 drop-shadow-xl">
+                        <div class="bg-slate-200 p-4 rounded-2xl">
+                            <img src="images/jacket-6.png" alt="">
+                        </div>
+                        <div class="my-2 py-2">
+                            <h3 class="text-2xl text-pink-700">Yellow M-jack</h2>
+                            <p class="text-black">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, incidunt?
+                            </p>
+                            <div class="flex justify-between my-2 py-2">
+                                <h2 class="text-4xl font-bold text-price">$270</h2>
+                                <button class="py-2 px-4 uppercase text-black bg-gradient-to-r from-[#c95d4a] to-[#c73e3e] hover:from[#ff5233] hoover:to-[#ff7d66] rounded">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 inline">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+                                      </svg>
+                                    Buy</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
     <!-- FOOTER -->
