--- a/penguin-fashion/index.html
+++ b/penguin-fashion/index.html
@@ -22,10 +22,10 @@
 </head>
 <body>
     <!-- header -->
-    <header class=" bg-emerald-100">
+    <header class=" bg-lime-100">
         <!-- nav -->
         <!-- banner -->
-        <div class="container mx-auto py-12 md:flex justify-center items-center mt-12">
+        <div class="container mx-auto py-12 md:flex justify-center items-center">
             <div class="space-y-6 px-4">
                 <h1 class="text-7xl font-semibold uppercase">
                     <span class="text-yellow-400">Be the Penguins</span>
@@ -47,7 +47,7 @@
     <!-- MAIN -->
     <main class="container mx-auto">
         <!-- Woman jacket -->
-        <section class="mt-12">
+        <section class="mt-12 py-4 px-2">
             <h2 class="text-5xl font-semibold uppercase text-pink-700">woman jacket</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2 my-2 py-2">
                 <!-- jacket card -->
@@ -108,8 +108,7 @@
             </div>
         </section>
         <!-- Man jacket -->
-        <section>
-            <section class="mt-12">
+        <section class="mt-12 py-4 px-2">
                 <h2 class="text-5xl font-semibold uppercase text-pink-700">Man jacket</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2 my-2 py-2">
                     <!-- jacket card -->
@@ -168,7 +167,6 @@
                         </div>
                     </div>
                 </div>
-            </section>
         </section>
     </main>
     <!-- FOOTER -->
