--- a/penguin-fashion/index.html
+++ b/penguin-fashion/index.html
@@ -23,7 +23,21 @@
 <body>
     <!-- header -->
     <header class=" bg-lime-100">
-        <!-- nav -->
+        <div class="flex justify-between py-8">
+            <div class="mx-4 px-4">
+                <img class="w-48 h-8" src="images/logo.png" alt="">
+            </div>
+            <div class="mx-4 py-4">
+                <nav class="flex space-x-4">
+                    <a class="text-green-800 font-semibold"href="##">Home</a>
+                    <a class="text-indigo-600 font-semibold" href="##">About Us</a>
+                    <a class="text-amber-500 font-semibold" href="##">Contact Us</a>
+                    <a class="rounded bg-slate-200" href="##">
+                        <img class="bg-rose-600 w-9 h-8" src="icons/shopping-cart 1.png" alt="">
+                        <span class="text-red-600 font-semibold">Shop</span></a>
+                </nav>
+            </div>
+        </div>
         <!-- banner -->
         <div class="container mx-auto py-12 md:flex justify-center items-center">
             <div class="space-y-6 px-4">
@@ -169,6 +183,34 @@
                 </div>
         </section>
     </main>
+    <section class="grid md:grid-cols-2 grid-cols-1 gap-5">
+        <div class=" bg-slate-200 h-32 flex p-6 rounded-2xl shadow-2xl">
+            <img class="h-20 w-20" src="images/house.png" alt="">
+            <div>
+                <h3 class="text-2xl">Find The Perfect fit</h3>
+                <p>Everybody is different, that is why we offer styles for everybody</p>
+            </div>
+            
+        </div>
+        <div class=" bg-slate-200 row-span-3 rounded-xl">
+            <img src="images/shopping.png" alt="">
+        </div>
+        <div class=" bg-slate-200 h-32 flex p-6 rounded-2xl shadow-2xl">
+            <img class="h-20 w-20" src="images/house.png" alt="">
+            <div>
+                <h3 class="text-2xl">Find The Perfect fit</h3>
+                <p>Everybody is different, that is why we offer styles for everybody</p>
+            </div>
+            
+        </div>
+        <div class=" bg-slate-200 h-32 flex p-6 rounded-2xl shadow-2xl">
+            <img class="h-20 w-20" src="images/house.png" alt="">
+            <div>
+                <h3 class="text-2xl">Find The Perfect fit</h3>
+                <p>Everybody is different, that is why we offer styles for everybody</p>
+            </div>          
+        </div>
+    </section>
     <!-- FOOTER -->
     <footer>
 
