working on footer+

--- a/penguin-fashion/index.html
+++ b/penguin-fashion/index.html
@@ -27,14 +27,14 @@
             <div class="mx-4 px-4">
                 <img class="w-48 h-8" src="images/logo.png" alt="">
             </div>
-            <div class="mx-4 py-4">
+            <div class="mx-6 py-4">
                 <nav class="flex space-x-4">
                     <a class="text-green-800 font-semibold"href="##">Home</a>
                     <a class="text-indigo-600 font-semibold" href="##">About Us</a>
                     <a class="text-amber-500 font-semibold" href="##">Contact Us</a>
-                    <a class="rounded bg-slate-200" href="##">
-                        <img class="bg-rose-600 w-9 h-8" src="icons/shopping-cart 1.png" alt="">
-                        <span class="text-red-600 font-semibold">Shop</span></a>
+                    <a class="rounded bg-slate-200 p-2" href="##">
+                        <img class="bg-rose-600 p-2 w-9 h-8 rounded" src="icons/shopping-cart 1.png" alt="">
+                        <span class="text-red-600 font-semibold p-1">Bag</span></a>
                 </nav>
             </div>
         </div>
@@ -182,7 +182,7 @@
                     </div>
                 </div>
         </section>
-        <section class="grid md:grid-cols-2 grid-cols-1 gap-5">
+        <section class="grid md:grid-cols-2 grid-cols-1 gap-5 my-8 py-4">
             <div class=" bg-slate-200 h-32 flex p-6 rounded-2xl shadow-2xl">
                 <img class="h-20 w-20" src="images/house.png" alt="">
                 <div>
@@ -212,8 +212,12 @@
         </section>
     </main>
     <!-- FOOTER -->
-    <footer>
-
+    <footer class="bg-cyan-500 my-4">
+        <div>
+            <h3>Important Links!</h3>
+            <img src="" alt="">
+            <img src="" alt=""> alt="">
+        </div>
     </footer>
 
 </body>
