--- a/penguin-fashion/index.html
+++ b/penguin-fashion/index.html
@@ -212,12 +212,28 @@
         </section>
     </main>
     <!-- FOOTER -->
-    <footer class="bg-cyan-500 my-4">
-        <div>
-            <h3>Important Links!</h3>
-            <img src="" alt="">
-            <img src="" alt=""> alt="">
+    <footer class="bg-cyan-400 my-4">
+        <div class="p-5">
+            <h3 class="text-red-800 font-bold my-2">Important Links!</h3>
+            <div class="flex flex-col space-y-8 ">
+                <a class="text-orange-800 font-semibold" href="##">Facebook 
+                    <span>
+                    <img src="facebook.png" alt="">
+                </span>
+                </a>
+                <a class="text-orange-800 font-semibold" href="##">Instagram 
+                    <span>
+                    <img src="insta.png" alt="">
+                </span>
+                </a>
+                <a class="text-orange-800 font-semibold" href="##">Twitter 
+                    <span>
+                        <img src="twitter.png" alt="">
+                </span> 
+                </a>
+            </div>
         </div>
+        
     </footer>
 
 </body>
