--- a/penguin-fashion/index.html
+++ b/penguin-fashion/index.html
@@ -182,6 +182,7 @@
                     </div>
                 </div>
         </section>
+        /**test comment *//
         <section class="grid md:grid-cols-2 grid-cols-1 gap-5 my-8 py-4">
             <div class=" bg-slate-200 h-32 flex p-6 rounded-2xl shadow-2xl">
                 <img class="h-20 w-20" src="images/house.png" alt="">
